--- a/src/components/Career/_career.scss
+++ b/src/components/Career/_career.scss
@@ -2,9 +2,11 @@
     .leftCareer{
       text-align: right;
       border-right: 2px solid $black;
+      margin-right: auto;
     }
     .rightCareer{
       text-align: left;
+      margin-left: auto;
     }
     .leftCareer, .rightCareer{
       padding: 20px;
