--- a/src/components/Projects/_projects.scss
+++ b/src/components/Projects/_projects.scss
@@ -3,6 +3,7 @@
         margin: 40px 20px;
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.20);
         transition: box-shadow .25s, -webkit-box-shadow .25s;
+        cursor: default;
         .card-body{
             padding: 0;
             .card-img{
@@ -12,6 +13,9 @@
                     width: 100%;
                     height: auto;
                     transition: opacity .4s;
+                }
+                &:hover{
+                    cursor: pointer;
                 }
             }
             .card-text{
@@ -60,6 +64,37 @@
         @media (max-width: $medium-bp){
             width: 80%;
             margin: 40px auto;
+        }        
+    }
+}
+
+.modal-dialog{
+    @media screen and (min-width: 576px) {
+        max-width: 70% !important;
+    }   
+    @media screen and (min-width:1200px) {
+        max-width: 1000px !important;
+    }
+    .modal-header{
+        padding: 1.5rem;
+
+        .close{
+            background: none;
+            border: none;
+            font-size: 3rem;
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+            position: absolute;
+            right: 10px;
+            top: 5px;        
         }
+    }
+    .modal-body{
+        margin: auto;
     }
 }
